terraform/regionals/modules/network/subnet_branch_private.tf
resource "aws_subnet" "branch_private" {
  vpc_id                  = var.vpc_id
  availability_zone       = "${var.region}a"
  map_public_ip_on_launch = false
  cidr_block              = var.cidrs.private_branch_ipv4

  enable_dns64                                   = true
  assign_ipv6_address_on_creation                = true
  enable_resource_name_dns_aaaa_record_on_launch = true
  ipv6_cidr_block                                = var.cidrs.private_branch_ipv6

  tags = {
    Name    = "${var.team_number}-branch-private"
    network = "private"
    org     = "branch"
  }
}

resource "aws_network_acl_association" "branch_private" {
  network_acl_id = aws_network_acl.this.id
  subnet_id      = aws_subnet.branch_private.id
}
